<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".DashboardAdminActivity">

    <!--tolbar-->
    <RelativeLayout
        android:id="@+id/tolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/yellow03">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/dashboard_admin"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/subTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/titleTv"
            android:text="@string/abc_example_com"
            android:textColor="@color/black"/>

        <ImageButton
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/kembali"
            android:src="@drawable/logout"
            tools:ignore="TouchTargetSizeCheck" />
    </RelativeLayout>

    <!--search-->
    <EditText
        android:id="@+id/searchEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tolbarRl"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:drawableStart="@drawable/search_gray"
        android:hint="Search"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="@color/gray01" />

    <!--categories-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomLL"
        android:layout_below="@id/searchEt"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/row_category" />

    <!-- bottom layout-->
    <LinearLayout
        android:id="@+id/bottomLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" >

        <!--add category-->
        <Button
            android:id="@+id/addCategoryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_button01"
            android:minHeight="50dp"
            android:text="+ Add Category"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_marginEnd="10dp" />

        <!--add pdf-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPdfFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pdf_black"
            app:backgroundTint="@color/yellow03"
            app:fabCustomSize="50dp"
            app:tint="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

</RelativeLayout>